Fixed issue with footer content having too much space in media queries

--- a/src/components/Footer/footer.styles.css
+++ b/src/components/Footer/footer.styles.css
@@ -133,7 +133,7 @@
     margin: 0 auto;
     position: absolute;
     width: 100%;
-    padding: 5rem calc((100vw - 81.25rem) / 2);
+    padding: 1rem calc((100vw - 81.25rem) / 2);
   }
 
   .footer-heading {
@@ -142,17 +142,20 @@
 
   .footer-content {
     display: grid;
-    grid-template-columns: 20rem 2fr;
-    padding: 5rem calc((100vw - 81.25rem) / 2);
+    grid-template-columns: 1fr;
+    grid-row-gap: 2rem;
+    justify-content: center;
+    padding: 0;
   }
 
   .footer-wrapper {
     flex-direction: column;
+    align-items: center;
   }
 
   .social-media-wrap {
     flex-direction: column;
-    margin: 2rem 0;
+    margin: 0 auto;
   }
 
   .social-icons {
@@ -167,77 +170,75 @@
 
 @media screen and (max-width: 48em) {
   .footer-container {
-    padding-top: 1.2rem;
+    margin: 0 auto;
+    position: absolute;
+    width: 100%;
+    padding: 1rem calc((100vw - 81.25rem) / 2);
+  }
+
+  .footer-heading {
+    padding: 3rem 0 0 0;
   }
 
   .footer-content {
-    margin: 0 3rem 0 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 2rem;
+    justify-content: center;
+    padding: 0;
   }
 
-  .footer-items {
-    min-width: 100%;
-    width: 100%;
-    word-break: break-all;
-  }
-
-  .footer-items p {
-    justify-items: center;
-    font-size: 1.0625rem;
-    font-weight: 600;
+  .footer-wrapper {
+    flex-direction: column;
+    align-items: center;
   }
 
   .social-media-wrap {
-    margin: 1rem 3rem 0 3rem;
-  }
-
-  .social-logo {
-    width: auto;
+    flex-direction: column;
+    margin: 0 auto;
   }
 
   .social-icons {
-    margin-top: -0.5rem;
+    position: static;
+    margin: 0 0 0 1rem;
   }
 
   .website-rights {
-    padding-top: 0.625rem;
+    margin: 1.5rem 0 2rem 0;
   }
 }
 
 @media screen and (max-width: 35em) {
   .footer-container {
-    padding-top: 1.2rem;
+    padding: 1rem calc((100vw - 81.25rem) / 2);
   }
 
   .footer-heading {
-    margin-left: 0;
-    padding-bottom: 1rem;
+    padding-bottom: 3rem;
   }
 
   .footer-content {
-    margin: 0 5rem 0 0;
+    margin: 0 0 0 4rem;
     height: 50%;
     display: flex;
     flex-direction: column;
   }
 
   .social-media-wrap {
-    margin-top: 14rem;
+    margin: 0 auto;
   }
 }
 
 @media screen and (max-width: 25.125em) {
   .footer-container {
     width: 100%;
+    min-height: 100%;
+    padding: 1rem calc((100vw - 81.25rem) / 2);
   }
 
   .footer-content {
-    margin: 0 4rem 0 0;
-    height: 50%;
+    margin: 0 auto;
     width: 100%;
-  }
-
-  .social-media-wrap {
-    margin-top: 19rem;
   }
 
   .social-logo {
